--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "covid-19",
   "version": "0.1.0",
   "private": true,
-
-"engines":{
-    "node":"8.17.0",
-    "npm":"6.13.4"
+  "engines": {
+    "node": "8.17.0",
+    "npm": "6.13.4"
   },
-
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,9 +18,10 @@
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
